--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <p>Anna vapaapäiväkoodit pilkkueroteltuna.</p>
     Vapaapäiväkoodit: <input type=text id="dayOffCodes" value="H, V, /"><br>
     Tee vuorot vuodelle: <input type=text id="year"><br>
+    Kopioi ja liitä työvuorosi tähän ja paina sen jälkeen Lataa CSV:
     <textarea id="titaniacsv" rows=30 cols=110></textarea><br>
-    <input onClick="readTextArea()" id="button1" type=button value="Lataa CSV">
+    <input onClick="readTextArea()" id="button1" type=button value="Lataa CSV"><br>
+    Tallenna tiedosto koneellesi, voit tuoda sen Google Kalenteriin Asetukset -> Tuo ja vie -toiminnolla.
 </body>
 <script src="titania.js"></script>
