--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <h3>Titania -> GCal convert</h3>
     <p>Huom! Koska aineistossa ei ole mukana vuosilukua, tulee vuodenvaihteessa eri vuoden työvuorot syöttää kahdella ajokerralla.</p>
     <p>Anna vapaapäiväkoodit pilkkueroteltuna.</p>
-    Vapaapäiväkoodit: <input type=text id="dayOffCodes" value="H, V, /"><br>
-    Tee vuorot vuodelle: <input type=text id="year"><br>
-    Kopioi ja liitä työvuorosi tähän ja paina sen jälkeen Lataa CSV:
+    Vapaapäiväkoodit: <input type=text id="dayOffCodes" value="H, V, /"><br><br>
+    Tee vuorot vuodelle: <input type=text id="year"><br><br>
+    Kopioi ja liitä työvuorosi tähän ja paina sen jälkeen Lataa CSV:<br>
     <textarea id="titaniacsv" rows=30 cols=110></textarea><br>
     <input onClick="readTextArea()" id="button1" type=button value="Lataa CSV"><br>
-    Tallenna tiedosto koneellesi, voit tuoda sen Google Kalenteriin Asetukset -> Tuo ja vie -toiminnolla.
+    Tallenna tiedosto koneellesi, voit tuoda sen Google Kalenteriin Asetukset -> Tuo ja vie -toiminnolla. Voit valita siellä mihin kalenteriin vuorot tuodaan.<br>
 </body>
 <script src="titania.js"></script>
