--- a/index.html
+++ b/index.html
@@ -27,6 +27,33 @@
         <input onClick="readTextArea()" id="button1" class="button-primary" type=button value="Lataa CSV"><br>
         Tallenna tiedosto koneellesi, voit tuoda sen Google Kalenteriin Asetukset -> Tuo ja vie -toiminnolla. Voit
         valita siell&auml; mihin kalenteriin vuorot tuodaan.<br>
+        Esimerkkityövuorolista:
+<pre>
+29.10 ma        V                                vapaapäivä                                         
+30.10 ti (tp)   H                                vuosiloma                                          
+31.10 ke (tp)   H                                vuosiloma                                          
+01.11 to (tp)   H                                vuosiloma                                          
+02.11 pe (tp)   H                                vuosiloma                                          
+03.11 *P pyhä   H                                vuosiloma                                          
+04.11 SU        H                                vuosiloma                                          
+--------------------------------------------------------------------------------                    
+05.11 ma        J 0930-2130                      ______________________________                     
+06.11 ti        E 0700-1915                      ______________________________                     
+07.11 ke        V                                vapaapäivä                                         
+08.11 to        V                                vapaapäivä                                         
+09.11 pe        A 0700-1500                      ______________________________                     
+10.11 la        E 0700-1915                      ______________________________                     
+11.11 SU        J 0930-2130                      ______________________________                     
+--------------------------------------------------------------------------------                    
+12.11 ma        V                                vapaapäivä                                         
+13.11 ti        A 0700-1500                      ______________________________                     
+14.11 ke        A 0700-1530                      ______________________________                     
+15.11 to        E 0700-1915                      ______________________________                     
+16.11 pe        V                                vapaapäivä                                         
+17.11 la        V                                vapaapäivä                                         
+18.11 SU        V                                vapaapäivä                                         
+
+</pre>
         <p>Lähdekoodit <a href="https://github.com/savikko/titania-to-gcal/">githubissa</a>. download.js by dandavis
             (danml.com)</p>
     </div>
