--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Titania &rarr; gcal convert</title>
 <link rel="stylesheet" href="normalize.css">
 <link rel="stylesheet" href="skeleton.css">
@@ -6,6 +7,9 @@
 <body>
     <div class=container>
         <h4>Titania &rarr; GCal convert</h4>
+
+        <p>T&auml;m&auml; ty&ouml;kalu on tarkoitettu ns. vanhanmallisen Titanian konvertoimiseen Google-kalenterin ymm&auml;rt&auml;m&auml;&auml; muotoon. </p>
+        <p>Jos sinulla on k&auml;yt&ouml;ss&auml;si uudemmanmallinen Titania, katso <a href="https://gist.github.com/savikko/866fe1097f2c74bbcd42a8e97abd8798"></a>t&auml;m&auml;</a></p>
 
         <p>Huom! Koska aineistossa ei ole mukana vuosilukua, tulee vuodenvaihteessa eri vuoden ty&ouml;vuorot
             sy&ouml;tt&auml;&auml; kahdella ajokerralla.</p>
