--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h4>Titania &rarr; GCal convert</h4>
 
         <p>T&auml;m&auml; ty&ouml;kalu on tarkoitettu ns. vanhanmallisen Titanian konvertoimiseen Google-kalenterin ymm&auml;rt&auml;m&auml;&auml; muotoon. </p>
-        <p>Jos sinulla on k&auml;yt&ouml;ss&auml;si uudemmanmallinen Titania, katso <a href="https://gist.github.com/savikko/866fe1097f2c74bbcd42a8e97abd8798">t&auml;m&auml;</a></p>
+        <p>Jos sinulla on k&auml;yt&ouml;ss&auml;si uudemmanmallinen Titania, katso <a href="https://gist.github.com/savikko/866fe1097f2c74bbcd42a8e97abd8798">t&auml;m&auml;</a>.</p>
 
         <p>Huom! Koska aineistossa ei ole mukana vuosilukua, tulee vuodenvaihteessa eri vuoden ty&ouml;vuorot
             sy&ouml;tt&auml;&auml; kahdella ajokerralla.</p>
